clusters/labinfra/apps/gitlab.xuperson.org/gitlab-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
  labels:
    app.kubernetes.io/name: gitlab
    app.kubernetes.io/component: devops
