clusters/labinfra/apps/gitlab.xuperson.org/gitlab-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-webservice
  namespace: gitlab
  labels:
    app.kubernetes.io/name: gitlab
    app.kubernetes.io/component: ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gitlab.xuperson.org
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/websocket-services: "gitlab-webservice-default"
    nginx.ingress.kubernetes.io/proxy-set-headers: "cloudflare/proxy-headers"
spec:
  ingressClassName: nginx
  rules:
  - host: gitlab.xuperson.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-webservice-default
            port:
              number: 8080
